# cielab-gamut-tools-py

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLI_DESIGN.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
docs/: plot_rings_plan.md
src/cielab_gamut_tools/: __init__.py  gamut.py  measurement.py  synthetic.py
src/cielab_gamut_tools/cli/: __init__.py  _app.py  _resolve.py
src/cielab_gamut_tools/cli/commands/: about.py  calculate.py  generate.py  plot.py
src/cielab_gamut_tools/colorspace/: __init__.py  adaptation.py  lab.py  srgb.py
src/cielab_gamut_tools/geometry/: __init__.py  volume.py
src/cielab_gamut_tools/io/: __init__.py  cgats.py
src/cielab_gamut_tools/plotting/: __init__.py  rings.py  surface.py
src/gamut_volume/: __init__.py  gamut.py  synthetic.py
src/gamut_volume/colorspace/: __init__.py  adaptation.py
src/gamut_volume/geometry/: __init__.py  tesselation.py  volume.py
src/gamut_volume/io/: __init__.py  cgats.py
src/gamut_volume/plotting/: __init__.py  rings.py  surface.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_calculate.py  test_cli_generate.py  test_cli_plot.py  test_colorspace.py  test_gamut.py  test_geometry.py  test_io.py  test_measurement.py  test_synthetic.py
