[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamut-volume"
version = "0.1.0"
description = "Calculate and visualize CIELab gamut volumes of color displays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Euan Smith" },
]
keywords = [
    "color",
    "colorimetry",
    "CIELab",
    "gamut",
    "display",
    "color-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/CIELab-gamut-tools/gamut-volume-py"
Repository = "https://github.com/CIELab-gamut-tools/gamut-volume-py"
Issues = "https://github.com/CIELab-gamut-tools/gamut-volume-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gamut_volume"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
source = ["src/gamut_volume"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
