[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cielab-gamut-tools"
version = "0.1.0"
description = "Calculate and visualize CIELab colour gamuts of displays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Euan Smith", email = "euan1971@yahoo.co.uk" },
]
keywords = [
    "color",
    "colorimetry",
    "CIELab",
    "gamut",
    "display",
    "color-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "numba>=0.57",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/CIELab-gamut-tools/cielab-gamut-tools-py"
Repository = "https://github.com/CIELab-gamut-tools/cielab-gamut-tools-py"
Issues = "https://github.com/CIELab-gamut-tools/cielab-gamut-tools-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cielab_gamut_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
source = ["src/cielab_gamut_tools"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
